first version of comming_store index.html

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+              <a class="nav-link js-scroll-trigger" href="#services">Service</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+              <a class="nav-link js-scroll-trigger" href="#portfolio">Features</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -59,7 +59,7 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>찾아가지 않아도 찾아오는 상점</strong><br />
+              <strong>찾아가지 않아도 찾아오는 상점<br /></strong>
               <strong style="color: #F05F40;">COMING STORE</strong>
             </h1>
             <hr>
@@ -77,10 +77,11 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading text-white">We've got what you need!</h2>
+            <h2 class="section-heading text-white">오직 당신만을 위한 세상에서 가장 친절한 상점!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+            <p class="text-faded mb-4">기존에는 소비자가 원하는 재화나 서비스를 구매하기 위해 직접 상점을 찾아가야 했다. 온라인에서 구매하더라도 직접 해당 사이트를 방문하여야 하는건 마찬가지이다. 이때문에 손님은 왕이라는 말이 무색할 정도로 소비자는 불편을 겪어야했다. 커밍스토어는 이러한 소비자의 불편을 해결해준다. 커밍스토어에 내가 원하는 재화나 서비스의 종류, 가격대, 특성 등을 공고하면, 이에 맞는 조건을 갖춘 여러 상점들이 나에게 딱 맞는 딜을 제안해온다. 소비자는 이제 방구석에 누워 자신에게 가장 적합한 딜을 선택하면 그만!
+              </p>
+            <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">지금 시작하세요!</a>
           </div>
         </div>
       </div>
@@ -90,7 +91,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading">커밍스토어는 이렇게 다르다!</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -99,30 +100,30 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-diamond text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <i class="fa fa-4x fa-user text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">소비자 중심 거래</h3>
+              <p class="text-muted mb-0">내가 사고 싶은 건 없고 판매자가 팔고 싶은 것만 가득하던 기존 거래...<div style="color:#F05F40;">커밍스토에서는 사고 싶은 것을 제시하면 판매자가 알아서 찾아온다!</div></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-microchip text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <i class="fa fa-4x fa-check text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">믿을 수 있는 거래</h3>
+              <p class="text-muted mb-0">사고 싶은 거 판다고 해서 갔더니 가격 다르고 품절에 허위매물까지...<div style="color:#F05F40;">커밍스토어는 장기간의 거래데이터를 기반으로 판매자의 신뢰도를 분석하여 필터링해주니 블랙셀러에 대한 걱정은 이제 그만!</div></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-newspaper-o text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <i class="fa fa-4x fa-bolt text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">신속한 거래</h3>
+              <p class="text-muted mb-0">예약은 했는데 내 물건은 대체 언제 받을 수 있을까...? 예약은 받았는데 손님이 안오면 어떡하지...?<div style="color:#F05F40;">커밍스토어의 코인시스템과 함께 구매자와 판매자 모두 안심하고 신속하게 거래하라!</div></p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
-              <i class="fa fa-4x fa-heart text-primary mb-3 sr-icons"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-handshake-o text-primary mb-3 sr-icons"></i>
+              <h3 class="mb-3">맞춤형 거래</h3>
+              <p class="text-muted mb-0">번화가의 비싼 임차료, 아리송한 효과의 광고비... 손님 끌어 들이기 위해 더 이상 돈 낭비하지 말자!<div style="color:#F05F40;">커밍스토어는 내 상품의 잠재 고객에게만 맞춤형 거래를 제안하여 최소 비용으로 최대 수익 보장!</div></p>
             </div>
           </div>
         </div>
@@ -138,10 +139,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    소비자 요구사항 중심의 역경매 플랫폼
                   </div>
                   <div class="project-name">
-                    Project Name
+                    소비자가 원하는 요구사항을 공고하면, 이를 충족시킬 수 있는 판매자가 맞춤형 딜을 제안
                   </div>
                 </div>
               </div>
@@ -153,10 +154,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    갱신 기능을 통한 유령 구매자-판매자 선별
                   </div>
                   <div class="project-name">
-                    Project Name
+                    원하는 조건의 거래상대방을 실시간으로 찾을 수 있도록 장시간 미갱신 이용자를 시스템에서 제거
                   </div>
                 </div>
               </div>
@@ -168,10 +169,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    거래 기록의 철저한 분석을 통한 판매자 등급 선별
                   </div>
                   <div class="project-name">
-                    Project Name
+                    사기 거래, 거래 미충족률, 거래 평점 등 이용자의 신뢰도를 검증하기 위한 여러 지표를 체계적으로 제공
                   </div>
                 </div>
               </div>
@@ -183,10 +184,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    고객의 요구사항에 가장 적합한 오퍼를 상위 랭크
                   </div>
                   <div class="project-name">
-                    Project Name
+                    판매자의 여러 오퍼 중 고객의 요구사항에 가장 적합한 것을 리스트 상위에 랭크
                   </div>
                 </div>
               </div>
@@ -198,10 +199,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                      거래의 안정성 및 신속성 보장을 위한 코인 시스템
                   </div>
                   <div class="project-name">
-                    Project Name
+                    거래가 성립된 이후 판매자의 빠른 서비스 개시를 위해 구매자는 코인을 지급하며, 지급된 코인은 서비스 완료 후 구매자의 동의를 얻어야만 현금화 가능
                   </div>
                 </div>
               </div>
@@ -213,10 +214,10 @@
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-category text-faded">
-                    Category
+                    판매자 주도의 알림 시스템 관리
                   </div>
                   <div class="project-name">
-                    Project Name
+                    자신이 판매할 수 있는 재화나 서비스에 대해 적절히 알림을 받을 수 있도록 판매자가 주도적으로 알림 시스템을 관리
                   </div>
                 </div>
               </div>
@@ -228,8 +229,8 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4">모바일 애플리케이션 다운로드!</h2>
-        <a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>
+        <h2 class="mb-4">커밍스토어가<br />지금 당신을 찾아갑니다!</h2>
+        <a class="btn btn-light btn-xl sr-button" href="https://github.com/coldzero93/ComingStore_Web">자세히 알아보기!</a>
       </div>
     </section>
 
@@ -239,7 +240,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">지금 연락하세요!</h2>
             <hr class="my-4">
-            <p class="mb-5">커밍스토어와 함께 새로운 소비시대를 열어갈 스마트한 Seller와 Partner 누구든 환영합니다!</p>
+            <p class="mb-5">커밍스토어와 함께 새로운 소비시대를 열어 갈 스마트한 Seller와 Partner 누구든 환영합니다!</p>
           </div>
         </div>
         <div class="row">
